refactor(*): Java写法优化